--- a/bookshop/composer.json
+++ b/bookshop/composer.json
@@ -7,7 +7,8 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
-        "illuminate/html": "^5.0"
+        "illuminate/html": "^5.0",
+        "anhskohbo/no-captcha": "2.*"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -17,7 +18,9 @@
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "way/generators": "^3.0",
         "laracasts/generators": "^1.1"
+
     },
+
     "autoload": {
         "classmap": [
             "database"
